deploy/k8s/atlas-asset-expiration.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-asset-expiration
  namespace: atlas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atlas-asset-expiration
  template:
    metadata:
      labels:
        app: atlas-asset-expiration
    spec:
      containers:
      - name: asset-expiration
        image: ghcr.io/chronicle20/atlas-asset-expiration/atlas-asset-expiration:latest
        ports:
        - containerPort: 8080
