deploy/k8s/atlas-consumables.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-consumables
  namespace: atlas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-consumables
  template:
    metadata:
      labels:
        app: atlas-consumables
    spec:
      containers:
      - name: atlas-consumables
        image: ghcr.io/chronicle20/atlas-consumables/atlas-consumables:latest
        ports:
        - containerPort: 8080
