deploy/k8s/atlas-expressions.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-expressions
  namespace: atlas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-expressions
  template:
    metadata:
      labels:
        app: atlas-expressions
    spec:
      containers:
      - name: expressions
        image: ghcr.io/chronicle20/atlas-expressions/atlas-expressions:latest
        ports:
        - containerPort: 8080
