deploy/k8s/atlas-fame.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-fame
  namespace: atlas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-fame
  template:
    metadata:
      labels:
        app: atlas-fame
    spec:
      containers:
      - name: fame
        image: ghcr.io/chronicle20/atlas-fame/atlas-fame:latest
        ports:
        - containerPort: 8080
