deploy/k8s/atlas-messages.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-messages
  namespace: atlas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-messages
  template:
    metadata:
      labels:
        app: atlas-messages
    spec:
      containers:
      - name: messages
        image: ghcr.io/chronicle20/atlas-messages/atlas-messages:latest
        ports:
        - containerPort: 8080
