deploy/k8s/atlas-account.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-account
  namespace: atlas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-account
  template:
    metadata:
      labels:
        app: atlas-account
    spec:
      containers:
      - name: account
        image: ghcr.io/chronicle20/atlas-account/atlas-account:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-account
  namespace: atlas
spec:
  selector:
    app: atlas-account
  ports:
  - protocol: TCP
    port: 8080
