deploy/k8s/atlas-chairs.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-chairs
  namespace: atlas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-chairs
  template:
    metadata:
      labels:
        app: atlas-chairs
    spec:
      containers:
      - name: chairs
        image: ghcr.io/chronicle20/atlas-chairs/atlas-chairs:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-chairs
  namespace: atlas
spec:
  selector:
    app: atlas-chairs
  ports:
  - protocol: TCP
    port: 8080
