deploy/k8s/atlas-chalkboards.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-chalkboards
  namespace: atlas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-chalkboards
  template:
    metadata:
      labels:
        app: atlas-chalkboards
    spec:
      containers:
      - name: chalkboards
        image: ghcr.io/chronicle20/atlas-chalkboards/atlas-chalkboards:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-chalkboards
  namespace: atlas
spec:
  selector:
    app: atlas-chalkboards
  ports:
  - protocol: TCP
    port: 8080
