deploy/k8s/atlas-character.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-character
  namespace: atlas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atlas-character
  template:
    metadata:
      labels:
        app: atlas-character
    spec:
      containers:
      - name: character
        image: ghcr.io/chronicle20/atlas-character/atlas-character:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-character
  namespace: atlas
spec:
  selector:
    app: atlas-character
  ports:
  - protocol: TCP
    port: 8080
