deploy/k8s/atlas-drops.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-drops
  namespace: atlas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-drops
  template:
    metadata:
      labels:
        app: atlas-drops
    spec:
      containers:
      - name: drops
        image: ghcr.io/chronicle20/atlas-drops/atlas-drops:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-drops
  namespace: atlas
spec:
  selector:
    app: atlas-drops
  ports:
  - protocol: TCP
    port: 8080
