deploy/k8s/atlas-effective-stats.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-effective-stats
  namespace: atlas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-effective-stats
  template:
    metadata:
      labels:
        app: atlas-effective-stats
    spec:
      containers:
      - name: effective-stats
        image: ghcr.io/chronicle20/atlas-effective-stats/atlas-effective-stats:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-effective-stats
  namespace: atlas
spec:
  selector:
    app: atlas-effective-stats
  ports:
  - protocol: TCP
    port: 8080
