deploy/k8s/atlas-guilds.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-guilds
  namespace: atlas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-guilds
  template:
    metadata:
      labels:
        app: atlas-guilds
    spec:
      containers:
      - name: guilds
        image: ghcr.io/chronicle20/atlas-guilds/atlas-guilds:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-guilds
  namespace: atlas
spec:
  selector:
    app: atlas-guilds
  ports:
  - protocol: TCP
    port: 8080
