deploy/k8s/atlas-invites.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-invites
  namespace: atlas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-invites
  template:
    metadata:
      labels:
        app: atlas-invites
    spec:
      containers:
      - name: invites
        image: ghcr.io/chronicle20/atlas-invites/atlas-invites:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-invites
  namespace: atlas
spec:
  selector:
    app: atlas-invites
  ports:
  - protocol: TCP
    port: 8080
