deploy/k8s/atlas-merchant.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-merchant
  namespace: atlas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-merchant
  template:
    metadata:
      labels:
        app: atlas-merchant
    spec:
      containers:
      - name: merchant
        image: ghcr.io/chronicle20/atlas-merchant/atlas-merchant:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-merchant
  namespace: atlas
spec:
  selector:
    app: atlas-merchant
  ports:
  - protocol: TCP
    port: 8080
