deploy/k8s/atlas-messengers.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-messengers
  namespace: atlas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-messengers
  template:
    metadata:
      labels:
        app: atlas-messengers
    spec:
      containers:
      - name: messengers
        image: ghcr.io/chronicle20/atlas-messengers/atlas-messengers:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-messengers
  namespace: atlas
spec:
  selector:
    app: atlas-messengers
  ports:
  - protocol: TCP
    port: 8080
