deploy/k8s/atlas-monster-book.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-monster-book
  namespace: atlas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-monster-book
  template:
    metadata:
      labels:
        app: atlas-monster-book
    spec:
      containers:
      - name: monster-book
        image: ghcr.io/chronicle20/atlas-monster-book/atlas-monster-book:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-monster-book
  namespace: atlas
spec:
  selector:
    app: atlas-monster-book
  ports:
  - protocol: TCP
    port: 8080
