deploy/k8s/atlas-monsters.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-monsters
  namespace: atlas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-monsters
  template:
    metadata:
      labels:
        app: atlas-monsters
    spec:
      containers:
      - name: monsters
        image: ghcr.io/chronicle20/atlas-monsters/atlas-monsters:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-monsters
  namespace: atlas
spec:
  selector:
    app: atlas-monsters
  ports:
  - protocol: TCP
    port: 8080
