deploy/k8s/atlas-parties.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-parties
  namespace: atlas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-parties
  template:
    metadata:
      labels:
        app: atlas-parties
    spec:
      containers:
      - name: parties
        image: ghcr.io/chronicle20/atlas-parties/atlas-parties:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-parties
  namespace: atlas
spec:
  selector:
    app: atlas-parties
  ports:
  - protocol: TCP
    port: 8080
