deploy/k8s/atlas-party-quests.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-party-quests
  namespace: atlas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atlas-party-quests
  template:
    metadata:
      labels:
        app: atlas-party-quests
    spec:
      containers:
      - name: party-quests
        image: ghcr.io/chronicle20/atlas-party-quests/atlas-party-quests:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-party-quests
  namespace: atlas
spec:
  selector:
    app: atlas-party-quests
  ports:
  - protocol: TCP
    port: 8080
