deploy/k8s/atlas-pets.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-pets
  namespace: atlas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atlas-pets
  template:
    metadata:
      labels:
        app: atlas-pets
    spec:
      containers:
      - name: pets
        image: ghcr.io/chronicle20/atlas-pets/atlas-pets:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-pets
  namespace: atlas
spec:
  selector:
    app: atlas-pets
  ports:
  - protocol: TCP
    port: 8080
