deploy/k8s/atlas-portal-actions.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-portal-actions
  namespace: atlas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-portal-actions
  template:
    metadata:
      labels:
        app: atlas-portal-actions
    spec:
      containers:
      - name: portal-actions
        image: ghcr.io/chronicle20/atlas-portal-actions/atlas-portal-actions:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-portal-actions
  namespace: atlas
spec:
  selector:
    app: atlas-portal-actions
  ports:
  - protocol: TCP
    port: 8080
