deploy/k8s/atlas-portals.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-portals
  namespace: atlas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-portals
  template:
    metadata:
      labels:
        app: atlas-portals
    spec:
      containers:
      - name: portals
        image: ghcr.io/chronicle20/atlas-portals/atlas-portals:latest
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-portals
  namespace: atlas
spec:
  selector:
    app: atlas-portals
  ports:
    - protocol: TCP
      port: 8080
