deploy/k8s/atlas-reactor-actions.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-reactor-actions
  namespace: atlas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-reactor-actions
  template:
    metadata:
      labels:
        app: atlas-reactor-actions
    spec:
      containers:
      - name: reactor-actions
        image: ghcr.io/chronicle20/atlas-reactor-actions/atlas-reactor-actions:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-reactor-actions
  namespace: atlas
spec:
  selector:
    app: atlas-reactor-actions
  ports:
  - protocol: TCP
    port: 8080
