deploy/k8s/atlas-ui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-ui
  namespace: atlas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-ui
  template:
    metadata:
      labels:
        app: atlas-ui
    spec:
      containers:
      - name: ui
        image: ghcr.io/chronicle20/atlas-ui/atlas-ui:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-ui
  namespace: atlas
spec:
  selector:
    app: atlas-ui
  ports:
  - protocol: TCP
    port: 80
