deploy/k8s/atlas-world.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-world
  namespace: atlas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atlas-world
  template:
    metadata:
      labels:
        app: atlas-world
    spec:
      containers:
      - name: world
        image: ghcr.io/chronicle20/atlas-world/atlas-world:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-world
  namespace: atlas
spec:
  selector:
    app: atlas-world
  ports:
  - protocol: TCP
    port: 8080
