deploy/k8s/atlas-wz-extractor.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-wz-extractor
  namespace: atlas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atlas-wz-extractor
  template:
    metadata:
      labels:
        app: atlas-wz-extractor
    spec:
      containers:
      - name: wz-extractor
        image: ghcr.io/chronicle20/atlas-wz-extractor/atlas-wz-extractor:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "1"
            memory: "2Gi"
          limits:
            cpu: "4"
            memory: "8Gi"
        volumeMounts:
          - mountPath: "/usr/wz-input"
            name: wz-input-storage
          - mountPath: "/usr/data"
            name: data-storage
          - mountPath: "/usr/assets"
            name: assets-storage
      volumes:
        - name: wz-input-storage
          persistentVolumeClaim:
            claimName: atlas-wz-input-pvc
        - name: data-storage
          persistentVolumeClaim:
            claimName: atlas-data-pvc
        - name: assets-storage
          persistentVolumeClaim:
            claimName: atlas-assets-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: atlas-wz-extractor
  namespace: atlas
spec:
  selector:
    app: atlas-wz-extractor
  ports:
  - protocol: TCP
    port: 8080
